# unity-notifications

./: .bzrignore  CMakeLists.txt  README.txt
debian/: changelog  control  copyright  rules
examples/: example.py  icon-only.py  icon-summary-body.py  icon-summary.py  icon-updating.py  icon-value.py  interactive-notification.py  low-urgency.py  non-shaped-icon-summary-body.py  normal-urgency.py  sd-example-event-reminder.py  sd-example-incoming-call-canceled.py  sd-example-incoming-call.py  sd-example-incoming-file.py  sd-example-morning-alarm.py  sd-example-much-body-text.py  sd-example-password-entry.py  sd-example-simunlock.py  sd-example-user-auth.py  sd-example-using-button-tint-hint.py  sound.py  summary-body.py  summary-only.py  suppress-sound.py  trigger-sds.sh  update-notifications.py  urgent-urgency.py
examples/unsupported/: append-hint-example.py  icon-value.py  sync-icon-only.py
include/: ActionModel.h  CMakeLists.txt  DBusTypes.h  Notification.h  NotificationClient.h  NotificationClientPlugin.h  NotificationModel.h  NotificationPlugin.h  NotificationServer.h  action.h  actionmodel.h  notification.h  notification.hpp  notificationbackend.h  notificationbackend.hpp  notificationclient.h  notificationclientplugin.h  notificationmodel.h  notificationmodel.hpp  notificationplugin.h  notificationserver.h  notify-backend.h  notify-backend.h.in  notify-backend.hpp  renderer.h  renderer.hpp
src/: ActionModel.cpp  CMakeLists.txt  DBusTypes.cpp  Notification.cpp  NotificationClient.cpp  NotificationClientPlugin.cpp  NotificationModel.cpp  NotificationPlugin.cpp  NotificationServer.cpp  action.cpp  actionmodel.cpp  notification.cpp  notificationbackend.cpp  notificationclient.cpp  notificationclientplugin.cpp  notificationmodel.cpp  notificationplugin.cpp  notificationserver.cpp  org.freedesktop.Notifications.xml  qmldir  renderer.cpp
test/: CMakeLists.txt  notificationservertest.cpp  notificationtest.cpp  tst_NotificationInterface.qml
tools/: CMakeLists.txt  clientMainWindow.cpp  clientMainWindow.h  clientMainWindow.ui  datatest.qml  dbusclient.cpp  dbusserver.cpp  dbustool.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  qmltest.cpp  serverMainWindow.cpp  serverMainWindow.h  serverMainWindow.ui  viewer.cpp
tools/Notifications/: Notification.qml  Notifications.qml  timings.js
